# python-webp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml  release.yml
src/python_webp/: __init__.py  __version__.py  _logging.py  _settings.py  cli.py  converter.py  exceptions.py
src/pywebp/: __main__.py  _arg_parser.py  core.py
src/pywebp2/: __main__.py  core.py
