[project]
name = "pywebp2"
description = "Python image converter to webp format"
authors = [
    { name = "Gabriel Nobrega", email = "gabrieltkdnobrega63@gmail.com" },
]
dependencies = ["pillow>=10.3.0"]
requires-python = ">=3.11"
readme = "README.md"

license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/biellSilva/python-webp"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "file"
path = "src/pywebp2/__version__.py"


[tool.pdm.dev-dependencies]
dev = ["types-pillow>=10.2.0.20240511"]


[project.scripts]
pywebp = "pywebp2.core:main"


[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"
includes = ["src/pywebp2"]
source-includes = ["LICENSE", "README.md"]
editable-backend = "path"
